tests/machine/x/ocaml/list_index.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/list_index.ml", line 4, characters 2-15:
4 |   print_endline List.nth xs 1
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 4):
   2 | 
   3 | let () =
   4 |   print_endline List.nth xs 1
   5 | 
