tests/machine/x/ocaml/list_index.ml
let xs = [10;20;30]

let () =
  print_endline List.nth xs 1
